// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrackingDomainsCollection no subaccounts 1`] = `
<TableCollection
  columns={
    Array [
      "Domain",
      "Status",
    ]
  }
  filterBox={
    Object {
      "exampleModifiers": Array [
        "domain",
        "status",
      ],
      "itemToStringKeys": Array [
        "domain",
        "subaccount_id",
      ],
      "show": true,
    }
  }
  getRowData={[Function]}
  pagination={true}
  rows={
    Array [
      Object {
        "default": false,
        "domain": "all.verified.com",
        "status": Object {
          "cname_status": "valid",
          "compliance_status": "valid",
          "verified": true,
        },
      },
      Object {
        "default": false,
        "domain": "all.unverified.com",
        "status": Object {
          "cname_status": "unverified",
          "compliance_status": "unverified",
          "verified": false,
        },
      },
    ]
  }
/>
`;

exports[`TrackingDomainsCollection subaccounts 1`] = `
<TableCollection
  columns={
    Array [
      "Domain",
      "Status",
      "Subaccount",
    ]
  }
  filterBox={
    Object {
      "exampleModifiers": Array [
        "domain",
        "status",
      ],
      "itemToStringKeys": Array [
        "domain",
        "subaccount_id",
      ],
      "show": true,
    }
  }
  getRowData={[Function]}
  pagination={true}
  rows={
    Array [
      Object {
        "default": false,
        "domain": "all.verified.com",
        "status": Object {
          "cname_status": "valid",
          "compliance_status": "valid",
          "verified": true,
        },
      },
      Object {
        "default": false,
        "domain": "all.unverified.com",
        "status": Object {
          "cname_status": "unverified",
          "compliance_status": "unverified",
          "verified": false,
        },
      },
    ]
  }
/>
`;
